[metadata]
name = Mohr_Envelope
version = 0.0.1
author = Aly Abdelaziz
author_email = alicarlos13@gmail.com
description = Evaluate Mohr circles and failure envelope
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alicarlos/Mohr_Envelope
project_urls =
    Bug Tracker = https://github.com/massgame/Mohr_Envelope/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src